<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llMainMenu"
                android:layout_width="173px"
                android:layout_height="match_parent"
                android:background="@color/gray_626367"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="68px"
                    android:layout_marginTop="22px"
                    android:adjustViewBounds="true"
                    android:paddingStart="16px"
                    android:paddingEnd="16px"
                    android:src="@drawable/horus_logo" />

                <TextClock
                    android:id="@+id/textDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34px"
                    android:ellipsize="end"
                    android:format12Hour="yyyy/MM/dd"
                    android:format24Hour="yyyy/MM/dd"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/gray_e0e0e0"
                    android:textSize="20px"
                    app:autoSizeMaxTextSize="20px"
                    app:autoSizeMinTextSize="16px"
                    app:autoSizeStepGranularity="1px"
                    app:autoSizeTextType="uniform"
                    tools:text="textDay" />


                <TextClock
                    android:id="@+id/textTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:format12Hour="hh:mm aa"
                    android:format24Hour="HH:mm"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingStart="8px"
                    android:paddingEnd="8px"
                    android:textColor="@color/gray_e0e0e0"
                    android:textSize="45px"
                    app:autoSizeMaxTextSize="45px"
                    app:autoSizeMinTextSize="16px"
                    app:autoSizeStepGranularity="1px"
                    app:autoSizeTextType="uniform"
                    tools:text="textTime" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibLiveView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15px"
                    android:layout_marginTop="12px"
                    android:layout_marginEnd="15px"
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_btn"
                    android:padding="29px"
                    android:src="@drawable/live" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/changeCamera"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15px"
                    android:layout_marginTop="12px"
                    android:layout_marginEnd="15px"
                    android:layout_weight="1"
                    android:background="@drawable/bg_corner18px_line3px_9a9ca2"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/changeCameraText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9px"
                        android:textSize="35px"
                        android:textStyle="bold"
                        android:textColor="@color/gray_e0e0e0"
                        tools:text="Ch1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/changeCameraImg"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="40px"
                        android:layout_marginBottom="40px"
                        android:layout_marginStart="40px"
                        android:layout_marginEnd="40px"
                        android:src="@drawable/icon_change_camera_02"
                        android:adjustViewBounds="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibDataManagement"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15px"
                    android:layout_marginTop="14px"
                    android:layout_marginEnd="15px"
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_btn"
                    android:padding="29px"
                    android:src="@drawable/folder" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibSettings"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15px"
                    android:layout_marginTop="14px"
                    android:layout_marginEnd="15px"
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_btn"
                    android:padding="29px"
                    android:src="@drawable/setting" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15px"
                    android:layout_marginTop="14px"
                    android:layout_marginEnd="15px"
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_btn"
                    android:padding="29px"
                    android:src="@drawable/user_not_logging" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/engineering"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15px"
                    android:layout_marginTop="14px"
                    android:layout_marginEnd="15px"
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_btn"
                    android:padding="29px"
                    android:src="@drawable/engineering_mode"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivBattery"
                        android:layout_width="wrap_content"
                        android:layout_height="60px"
                        android:layout_marginTop="37px"
                        android:layout_marginBottom="31px"
                        android:adjustViewBounds="true"
                        android:src="@drawable/battery_100"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvBattery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="100%"
                        android:textColor="@color/black"
                        android:textSize="20px"
                        app:layout_constraintBottom_toBottomOf="@id/ivBattery"
                        app:layout_constraintEnd_toEndOf="@id/ivBattery"
                        app:layout_constraintStart_toStartOf="@id/ivBattery"
                        app:layout_constraintTop_toTopOf="@id/ivBattery"
                        app:layout_constraintVertical_bias="0.42" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivCharging"
                        android:layout_width="20px"
                        android:layout_height="20px"
                        app:layout_constraintStart_toStartOf="@id/ivBattery"
                        app:layout_constraintTop_toTopOf="@id/ivBattery"
                        tools:src="@drawable/battery_green_charging" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/llMainMenu" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.app.customkeyboard.keyboard.CustomKeyboardView
            android:id="@+id/customKeyboardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:id="@+id/llErrorCode"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="173px"
            android:layout_marginBottom="118px"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"></LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>