...
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.miis.horusendoview.widget.AutoFitTextureView
            android:id="@+id/cameraView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
...
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/promptSnapshot"
                android:layout_width="@dimen/img_size_20"
                android:layout_height="@dimen/img_size_20"
                android:src="@drawable/oval_green"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/snapshot"
                android:layout_width="match_parent"
                android:layout_height="170px"
                android:layout_marginTop="14px"
                android:background="@drawable/bg_live_btn_01"
                android:padding="30px"
                android:src="@drawable/snapshot" />
...
