<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:background="@color/TRANSPARENT">

    <androidx.cardview.widget.CardView
        android:layout_width="220dp"
        android:layout_height="124dp"
        app:cardBackgroundColor="@color/gray_47484b"
        app:cardCornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:minWidth="@dimen/img_size_80"
            android:minHeight="@dimen/img_size_80"
            app:srcCompat="@drawable/e5000_lowerleft" />

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="8dp"
            android:text="Error #5000"
            android:textColor="@color/WHITE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="40px"
            android:layout_height="40px"
            android:layout_gravity="right|top"
            android:layout_marginTop="10px"
            android:layout_marginRight="10px"
            app:srcCompat="@drawable/error_close" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>